--- a/toolkitcore/ToolkitCore.csproj
+++ b/toolkitcore/ToolkitCore.csproj
@@ -30,14 +30,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Krafs.Rimworld.Ref" Version="1.4.3517-beta" />
+    <PackageReference Include="Krafs.Rimworld.Ref" Version="1.4.3520-beta" />
     <PackageReference Include="Lib.Harmony" Version="2.2.2" ExcludeAssets="runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddonMenu.cs" />
-    <Compile Include="CommandInterfaceBase.cs" />
     <Compile Include="CommandMethods\HelloWorld.cs" />
     <Compile Include="Controllers\ChatCommandController.cs" />
     <Compile Include="Controllers\ViewerController.cs" />
@@ -45,39 +44,26 @@
     <Compile Include="Database\GlobalDatabase.cs" />
     <Compile Include="HarmonyPatches\SavePatch.cs" />
     <Compile Include="Interfaces\IAddonMenu.cs" />
-    <Compile Include="Interfaces\ICommand.cs" />
-    <Compile Include="Interfaces\IMessage.cs" />
-    <Compile Include="MessageInterfaceBase.cs" />
     <Compile Include="Models\MessageLog.cs" />
-    <Compile Include="Models\Permissions.cs" />
+    <Compile Include="Models\Viewer.cs" />
     <Compile Include="Models\Viewers.cs" />
-    <Compile Include="Models\Services.cs" />
     <Compile Include="Models\ToolkitAddon.cs" />
     <Compile Include="Models\ToolkitChatCommand.cs" />
     <Compile Include="Models\CommandMethod.cs" />
-    <Compile Include="Models\Twitch\ChatMessageEvent.cs" />
-    <Compile Include="Models\Twitch\ChatCommandEvent.cs" />
-    <Compile Include="ToolkitCorePermissions.cs" />
+    <Compile Include="ToolkitData.cs" />
     <Compile Include="TwitchWrapper.cs" />
     <Compile Include="ToolkitCore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ToolkitCoreSettings.cs" />
     <Compile Include="TwitchInterfaceBase.cs" />
-    <Compile Include="Utilities\CommandInterface.cs" />
-    <Compile Include="Utilities\MessageInterface.cs" />
-    <Compile Include="Utilities\MessageSender.cs" />
-    <Compile Include="Utilities\SettingsHelper.cs" />
     <Compile Include="Utilities\AddonRegistry.cs" />
     <Compile Include="Utilities\CommandFilter.cs" />
     <Compile Include="Utilities\TCText.cs" />
-    <Compile Include="Windows\GlobalSettingsWidget.cs" />
+    <Compile Include="Utilities\ViewerInterface.cs" />
+    <Compile Include="Utilities\ViewerTracker.cs" />
     <Compile Include="Windows\MainTabWindow_ToolkitCore.cs" />
-    <Compile Include="Windows\TwitchSettingsWidget.cs" />
-    <Compile Include="Windows\Utility\Dialog_TextEntry.cs" />
-    <Compile Include="Windows\Window_Commands.cs" />
     <Compile Include="Windows\Window_MessageLog.cs" />
     <Compile Include="Windows\Window_ModSettings.cs" />
-    <Compile Include="Windows\Window_Services.cs" />
   </ItemGroup>
   <ItemGroup>
     <ContentWithTargetPath Include="About\**" CopyToOutputDirectory="PreserveNewest" TargetPath="..\About\%(Filename)%(Extension)" />
