--- a/toolkitcore/ToolkitCore.csproj
+++ b/toolkitcore/ToolkitCore.csproj
@@ -30,8 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Krafs.Rimworld.Ref" Version="1.5.4035-beta" />
-    <PackageReference Include="Lib.Harmony" Version="2.3.1.1" ExcludeAssets="runtime">
+    <PackageReference Include="Krafs.Rimworld.Ref" Version="1.5.4062" />
+    <PackageReference Include="Lib.Harmony" Version="2.3.3" ExcludeAssets="runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
