/*  * File: ToolkitCoreSettings.cs  * Project: ToolkitCore  *  * Updated: September 22, 2023  * Modified Using: DeepSeek AI  *  * Summary of Changes:  * 1. Restored original static field names for backward compatibility with ToolkitUtilities.  * 2. Added instance fields for internal use with proper synchronization.  * 3. Added all necessary helper methods for rendering the UI.  * 4. Maintained instance-based architecture for internal mod use.  * 5. Integrated translation support using keys from LanguageData.xml.  */
/*
 * File: AddonMenu.cs
 * Project: ToolkitCore
 *
 * Updated: September 22, 2023
 * Modified Using: DeepSeek AI
 *
 * Summary of Changes:
 * 1. Added .Translate() to all menu option strings to enable localization
 * 2. Changed "Message Log" to use the translation key "MessageLog" (without space) to match the XML
 */

--- a/toolkitcore/ToolkitCore.csproj
+++ b/toolkitcore/ToolkitCore.csproj
@@ -124,4 +124,7 @@
       <Private>False</Private>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="AddonMenu.xml" />
+  </ItemGroup>
 </Project>
