--- a/toolkitcore/ToolkitCore.csproj
+++ b/toolkitcore/ToolkitCore.csproj
@@ -125,6 +125,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Lanuages\English\Keyed\AddonMenu.xml" />
     <Content Include="Lanuages\English\Keyed\ToolkitCoreSettings.xml" />
     <Content Include="Textures\UI\Wiki\TTG_TokenPopup_1.png" />
     <Content Include="Textures\UI\Wiki\TTG_TokenPopup_2.png" />
