--- a/toolkitcore/ToolkitCore.csproj
+++ b/toolkitcore/ToolkitCore.csproj
@@ -37,8 +37,20 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.4</Version>
     </PackageReference>
+    <PackageReference Include="TwitchLib.Api.Core.Interfaces">
+      <Version>3.9.0</Version>
+    </PackageReference>
     <PackageReference Include="TwitchLib.Client">
       <Version>3.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="TwitchLib.Client.Enums">
+      <Version>3.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="TwitchLib.Client.Models">
+      <Version>3.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="TwitchLib.Communication">
+      <Version>2.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
